fixed copy-paste issue in doc
